# rustservant

./: .gitignore  Cargo.toml  README.md  build.rs  capture_pairing.js  discord_config.json.example  package-lock.json  package.json  rustplus.config.json.example  server_config.json.example  servers.json.example
src/: helpers.rs  items.rs  main.rs
src/discord/: mod.rs
